--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #====================================
 name: Minchen Yu
 title: Minchen Yu
-description: Ph.D.
+description: PhD
 avatar: /images/avatar.jpeg
 
 # Pagination
@@ -14,7 +14,7 @@ footer-links:
   dribbble:
   email: myuaj@connect.ust.hk
   facebook:
-  flickr: 
+  flickr:
   github: MincYu
   googleplus: # anything in your profile username that comes after plus.google.com/
   googlescholar: Kz2aAHQAAAAJ
