--- a/_config.yml
+++ b/_config.yml
@@ -81,13 +81,13 @@ analytics:
 # Site Author
 author:
   name             : "Minchen Yu 余旻晨"
-  avatar           : "photo.png"
+  avatar           : "photo.jpg"
   bio              : "PhD"
   location         : 
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?&user=Kz2aAHQAAAAJ"
-  email            : "myuaj [AT] connect [DOT] ust [DOT] hk"
+  email            : myuaj [AT] connect [DOT] ust [DOT] hk
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
