--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Minchen Yu 余旻晨"
+  name             : "Minchen Yu"
   avatar           : "photo.jpg"
   bio              : "PhD"
   location         : 
