--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Minchen Yu (余旻晨)"
+title                    : "Siqi Yao (姚思奇)"
 title_separator          : "-"
 name                     : &name
 description              : &description "personal description"
-url                      : https://mincyu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://YaoSiqi2003.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "mincyu/mincyu.github.io"
+repository               : "YaoSiqi2003/YaoSiqi2003.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
@@ -80,14 +80,14 @@ analytics:
 
 # Site Author
 author:
-  name             : "Minchen Yu"
+  name             : "Siqi Yao"
   avatar           : "photo.jpg"
-  bio              : "Assistant Professor@CUHK-SZ"
+  bio              : "Undergraduate Student@CUHK-SZ"
   location         : 
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "https://scholar.google.com/citations?&user=Kz2aAHQAAAAJ"
-  email            : "yuminchen@cuhk.edu.cn"
+  googlescholar    : "In Progress!"
+  email            : "122090664@link.cuhk.edu.cn"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -96,14 +96,14 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "mincyu"
+  github           : "YaoSiqi2003"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "minchen-yu-362454143"
-  orcid            : "https://orcid.org/0000-0002-6797-9028"
+  linkedin         : "In Progress!"
+  orcid            : "In Progress!"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
