--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Course Projects"
-    url: /course projects/    
+  # - title: "Course Projects"
+  #   url: /course projects/    
 
   - title: "Learning"
     url: /learning/
